--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.446.0",
     "next": "^14.2.5",
@@ -17,8 +18,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.46.0",
-    "@types/node": "24.3.1",
-    "@types/react": "19.1.12",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
